--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,37 @@
 {
   "name": "lcli/app-vcs",
+  "type": "library",
   "description": "PHP Web System Vcs manager",
-  "keywords": ["app-vcs","vcs", "version code system"],
-  "license": "Apache-2.0",
+  "keywords": ["vcs", "version code system"],
+  "homepage": "/",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "liangbl",
+      "email": "912551778@qq.com"
+    }
+  ],
   "require": {
-    "php": ">=5.6",
-    "jrb-it/php-cli": "1.*"
+    "php": "^7.0|<=8.*",
+    "ext-curl": "*"
   },
-
-  "bin": ["bin/appvcs"],
+  "require-dev": {
+  },
+  "conflict": {
+    "phpunit/phpunit": "<4.8.35|<5.4.3,>=5.0"
+  },
+  "suggest": {
+  },
   "autoload": {
     "psr-4": { "Lcli\\AppVcs\\": "src/" },
     "exclude-from-classmap": [
       "/Tests/"
     ]
+  },
+  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.3-dev"
+    }
   }
 }
