--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": "^7.0|<=8.*"
+    "php": ">=7.0"
   },
   "autoload": {
     "psr-4": { "Lcli\\AppVcs\\": "src/" },
