--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "name": "lcli/app-vcs",
   "type": "library",
+  "version": "1.0.0-dev",
   "description": "PHP Web System Vcs manager",
   "keywords": ["vcs", "version code system"],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "authors": [
     {
       "name": "1cli",
@@ -13,6 +14,8 @@
   "require": {
     "php": ">=7.0"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": "dev",
   "autoload": {
     "psr-4": { "Lcli\\AppVcs\\": "src/" },
     "exclude-from-classmap": [
