--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "require": {
     "php": ">=5.6"
   },
+  "bin": ["bin/appvcs"],
   "autoload": {
     "psr-4": { "Lcli\\AppVcs\\": "src/" },
     "exclude-from-classmap": [
