--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "keywords": ["app-vcs","vcs", "version code system"],
   "license": "Apache-2.0",
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "wp-cli/php-cli-tools": "0.*"
   },
   "bin": ["bin/appvcs"],
   "autoload": {
