--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,11 @@
 {
   "name": "lcli/app-vcs",
-  "type": "library",
   "description": "PHP Web System Vcs manager",
-  "keywords": ["vcs", "version code system"],
-  "homepage": "/",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "liangbl",
-      "email": "912551778@qq.com"
-    }
-  ],
+  "keywords": ["app-vcs","vcs", "version code system"],
+  "license": "Apache-2.0",
   "require": {
-    "php": "^7.0|<=8.*",
-    "ext-curl": "*"
-  },
-  "require-dev": {
-  },
-  "conflict": {
-    "phpunit/phpunit": "<4.8.35|<5.4.3,>=5.0"
-  },
-  "suggest": {
+    "php": ">=5.6",
+    "wp-cli/php-cli-tools": "0.*"
   },
   "bin": ["bin/appvcs"],
   "autoload": {
@@ -28,11 +13,5 @@
     "exclude-from-classmap": [
       "/Tests/"
     ]
-  },
-  "minimum-stability": "dev",
-  "extra": {
-    "branch-alias": {
-      "dev-master": "3.3-dev"
-    }
   }
 }
