app-vcs-1.6.4 修复 composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "post-install-cmd": [
-      "Lcli\\AppVcs\\Helpers::generatedConfig",
+      "Lcli\\AppVcs\\Helpers::generatedConfig"
     ]
   },
   "bin": ["bin/appvcs"],
