app-vcs-1.6.5 更新 composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "require": {
     "php": ">=5.6",
-    "wp-cli/php-cli-tools": "0.*"
+    "jrb-it/php-cli": "1.*"
   },
   "scripts": {
     "post-install-cmd": [
